--- a/backend/public/login.html
+++ b/backend/public/login.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name = 'viewport' content="width=device-width, initial-scale=1.0">
+    <title >login page</title>
+    <link rel="stylesheet" href="stylesheet/login.css">
 </head>
 <body>
+    <div class="login-container">
+        <h2>login</h2>
+        <form id="loginForm" >
+            <div class = "form-group">
+                <label for ="username">Username</label>
+                <input type = 'text' id ='username' name="username" required>
+            </div>
+            <div class="form-group">
+                <label for ="password">Password</label>
+                <input type = 'password' id ='password' name="password" required>
+            </div>
 
+            <button type="submit">login</button>
+            <div id = 'error-message'></div>
+
+
+        </form>
+
+    </div>
+    <script src="login.js"></script>
 </body>
 </html>
