--- a/backend/public/login.html
+++ b/backend/public/login.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name = 'viewport' content="width=device-width, initial-scale=1.0">
-    <title >login page</title>
+    <meta name='viewport' content="width=device-width, initial-scale=1.0">
+    <title>login page</title>
     <link rel="stylesheet" href="stylesheet/login.css">
 </head>
 <body>
-    <div class="login-container">
-        <h2>login</h2>
-        <form id="loginForm" >
-            <div class = "form-group">
-                <label for ="username">Username</label>
-                <input type = 'text' id ='username' name="username" required>
-            </div>
-            <div class="form-group">
-                <label for ="password">Password</label>
-                <input type = 'password' id ='password' name="password" required>
-            </div>
+<div class="login-container">
+    <h2>login</h2>
+    <form id="loginForm">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type='text' id='username' name="username" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type='password' id='password2' name="password" required>
+        </div>
 
-            <button type="submit">login</button>
-            <div id = 'error-message'></div>
+        <button type="submit">login</button>
+        <div id='error-message'></div>
+    </form>
 
 
-        </form>
+</div>
+<div class='register-container'>
+    <h3>Register</h3>
+    <form id='registerForm'>
+        <div class='form'>
+            <label for="name">Name</label>
+            <input type='text' id='name' name='name'>
+        </div>
+        <div class='form'>
+            <label for='family-name2'>Family name</label>
+            <input type='text' id="family-name2" name="family-name">
+        </div>
+        <div class='form'>
+            <label for='address '>Address </label>
+            <input type='text' id="address " name="address">
+        </div>
+        <div class='form'>
+            <label for='phoneNumber'>Phone Number</label>
+            <input type='number' id="PhoneNumber" name="PhoneNumber">
+        </div>
+        <div class='form'>
+            <label for='Password'>Password</label>
+            <input type='password' id="Password" name="Password">
+        </div>
+        <button type="submit">login</button>
+        <div id='errorMessage'></div>
+    </form>
+</div>
+<script src="javascripts/login.js"></script>
 
-    </div>
-    <script src="login.js"></script>
 </body>
+<!--<footer>designed by Navid</footer>-->
 </html>
