--- a/backend/public/product.html
+++ b/backend/public/product.html
@@ -327,7 +327,7 @@
         <div class="container">
             <div class="row row-pb-md">
                 <div class="col-md-4 fh5co-widget">
-                    <h3>Shop.</h3>
+                    <h3>Shop</h3>
                     <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta
                         adipisci architecto culpa amet.</p>
                 </div>
