--- a/backend/public/login.html
+++ b/backend/public/login.html
@@ -15,8 +15,8 @@
             <input type='text' id='username' name="username" required>
         </div>
         <div class="form-group">
-            <label for="passwordt">Password</label>
-            <input type='password' id='passwordt' name="passwordt" required>
+            <label for="password">Password</label>
+            <input type='password' id='password' name="password" required>
         </div>
 
         <button type="submit">login</button>
@@ -45,8 +45,8 @@
             <input type='number' id="phoneNumber" name="phoneNumber">
         </div>
         <div class='form'>
-            <label for='Password'>Password</label>
-            <input type='password' id="Password" name="Password">
+            <label for='Passwordt'>Password</label>
+            <input type='password' id="Passwordt" name="Passwordt">
         </div>
         <button type="submit">Register</button>
         <div id='errorMessage'></div>
