--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -82,6 +82,8 @@
                         </li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="login.html">Login</a>
+                            <a href="register.html">Register</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-xs-4 text-right hidden-xs menu-2">
