--- a/backend/public/register.html
+++ b/backend/public/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 <head>
     <meta charset="UTF-8">
     <title>Register page</title>
@@ -12,19 +12,19 @@
     <form id='registerForm' action="/register" method="post">
         <div class='form'>
             <label for="name">*Name</label>
-            <input type='text' id='name' name='name'>
+            <input type='text' id='name' name='name' required>
         </div>
         <div class='form'>
-            <label for='family-name2'>*Family name</label>
-            <input type='text' id="family-name2" name="family-name">
+            <label for='family-name'>*Family name</label>
+            <input type='text' id="family-name" name="family-name" required>
         </div>
         <div class='form'>
             <label for='address'>*Address</label>
-            <input type='text' id="address" name="address">
+            <input type='text' id="address" name="address" required>
         </div>
         <div class='form'>
             <label for='phoneNumber'>*Phone Number</label>
-            <input type='number' id="phoneNumber" name="phoneNumber">
+            <input type='number' id="phoneNumber" name="phoneNumber" required>
         </div>
         <div class='form'>
             <label for="email">Email</label>
@@ -32,12 +32,12 @@
         </div>
         <div class='form'>
             <label for='Password'>*Password</label>
-            <input type='password' id="Password" name="Password">
+            <input type='password' id="Password" name="Password" required>
         </div>
         <button type="submit">Register</button>
         <div id='errorMessage'></div>
     </form>
 </div>
-<script src="javascripts/login.js"></script>
+<script src="javascripts/register.js"></script>
 
 </body>
