--- a/backend/public/register.html
+++ b/backend/public/register.html
@@ -38,6 +38,6 @@
         <div id='errorMessage'></div>
     </form>
 </div>
-<script src="javascripts/register.js"></script>
+<script src="./javascripts/register.js"></script>
 
 </body>
