Add user completely fixed + convert it to Hash

--- a/backend/public/register.html
+++ b/backend/public/register.html
@@ -15,8 +15,8 @@
             <input type='text' id='name' name='name' required>
         </div>
         <div class='form'>
-            <label for='family-name'>*Family name</label>
-            <input type='text' id="family-name" name="family-name" required>
+            <label for='familyName'>*Family name</label>
+            <input type='text' id="familyName" name="familyName" required>
         </div>
         <div class='form'>
             <label for='address'>*Address</label>
