Add phone length checker and check password length should be more than 7 character

--- a/backend/public/register.html
+++ b/backend/public/register.html
@@ -25,6 +25,7 @@
         <div class='form'>
             <label for='phoneNumber'>*Phone Number</label>
             <input type='number' id="phoneNumber" name="phoneNumber" required>
+            <div id="phone_error"></div>
         </div>
         <div class='form'>
             <label for="email">Email</label>
@@ -33,6 +34,7 @@
         <div class='form'>
             <label for='Password'>*Password</label>
             <input type='password' id="Password" name="Password" required>
+            <div id="errorPassword"></div>
         </div>
         <button type="submit">Register</button>
         <div id='errorMessage'></div>
