--- a/backend/public/about.html
+++ b/backend/public/about.html
@@ -10,19 +10,8 @@
           content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"/>
     <meta name="author" content="gettemplates.co"/>
 
-    <!--
-    //////////////////////////////////////////////////////
 
-    FREE HTML5 TEMPLATE
-    DESIGNED & DEVELOPED by FreeHTML5.co
 
-    Website: 		http://freehtml5.co/
-    Email: 			info@freehtml5.co
-    Twitter: 		http://twitter.com/fh5co
-    Facebook: 		https://www.facebook.com/fh5co
-
-    //////////////////////////////////////////////////////
-     -->
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
@@ -125,8 +114,10 @@
                     <div class="display-t">
                         <div class="display-tc animate-box" data-animate-effect="fadeIn">
                             <h1>About Us</h1>
-                            <h2>Free html5 templates Made by <a href="http://freehtml5.co"
-                                                                target="_blank">freehtml5.co</a></h2>
+                            <h2>Designed by Navid Abbasi
+<!--                                <a href="http://freehtml5.co" target="_blank">freehtml5.co</a>-->
+
+                            </h2>
                         </div>
                     </div>
                 </div>
@@ -141,21 +132,19 @@
                     <div class="col-md-6">
                         <div class="desc">
                             <h3>Company History</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quo est quis mollitia
-                                ratione magni assumenda repellat atque modi temporibus tempore ex. Dolore facilis ex
-                                sunt ea praesentium expedita numquam?</p>
-                            <p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id
-                                repellat velit eaque aspernatur expedita. Possimus itaque adipisci rem dolorem nesciunt
-                                perferendis quae amet deserunt eum labore quidem minima.</p>
+                            <p></p>
+<!--                            <p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id-->
+<!--                                repellat velit eaque aspernatur expedita. Possimus itaque adipisci rem dolorem nesciunt-->
+<!--                                perferendis quae amet deserunt eum labore quidem minima.</p>-->
                         </div>
                         <div class="desc">
                             <h3>Mission &amp; Vission</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quo est quis mollitia
-                                ratione magni assumenda repellat atque modi temporibus tempore ex. Dolore facilis ex
-                                sunt ea praesentium expedita numquam?</p>
-                            <p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id
-                                repellat velit eaque aspernatur expedita. Possimus itaque adipisci rem dolorem nesciunt
-                                perferendis quae amet deserunt eum labore quidem minima.</p>
+<!--                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quo est quis mollitia-->
+<!--                                ratione magni assumenda repellat atque modi temporibus tempore ex. Dolore facilis ex-->
+<!--                                sunt ea praesentium expedita numquam?</p>-->
+<!--                            <p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id-->
+<!--                                repellat velit eaque aspernatur expedita. Possimus itaque adipisci rem dolorem nesciunt-->
+<!--                                perferendis quae amet deserunt eum labore quidem minima.</p>-->
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -167,48 +156,46 @@
                 <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
                     <span>Productive Staff</span>
                     <h2>Meet Our Team</h2>
-                    <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident.
-                        Odit ab aliquam dolor eius.</p>
+<!--                    <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident.-->
+<!--                        Odit ab aliquam dolor eius.</p>-->
                 </div>
             </div>
             <div class="row">
+<!--                <div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">-->
+<!--                    <div class="fh5co-staff">-->
+<!--                        <img src="images/person1.jpg" alt="Free HTML5 Templates by gettemplates.co">-->
+<!--                        <h3>Jean Smith</h3>-->
+<!--                        <strong class="role">Chief Executive Officer</strong>-->
+<!--                        <p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat-->
+<!--                            velit eaque aspernatur expedita. Possimus itaque adipisci.</p>-->
+<!--                        <ul class="fh5co-social-icons">-->
+<!--                            <li><a href="#"><i class="icon-facebook"></i></a></li>-->
+<!--                            <li><a href="#"><i class="icon-twitter"></i></a></li>-->
+<!--                            <li><a href="#"><i class="icon-dribbble"></i></a></li>-->
+<!--                            <li><a href="#"><i class="icon-github"></i></a></li>-->
+<!--                        </ul>-->
+<!--                    </div>-->
+<!--                </div>-->
                 <div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
                     <div class="fh5co-staff">
-                        <img src="images/person1.jpg" alt="Free HTML5 Templates by gettemplates.co">
-                        <h3>Jean Smith</h3>
+                        <img src="images/Navid.jpg" >
+                        <h3>Navid Abbasi</h3>
+                        <strong class="role">Software Engineer</strong>
+                        <p></p>
+                        <ul class="fh5co-social-icons">
+                            <li><a href="#"><i class="icon-facebook"></i></a></li>
+                            <li><a href="#"><i class="icon-twitter"></i></a></li>
+                            <li><a href="#"><i class="icon-dribbble"></i></a></li>
+                            <li><a href="#"><i class="icon-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
+                    <div class="fh5co-staff">
+                        <img src="images/MissYavari.jpg" >
+                        <h3>Masi Yavari</h3>
                         <strong class="role">Chief Executive Officer</strong>
-                        <p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat
-                            velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
-                        <ul class="fh5co-social-icons">
-                            <li><a href="#"><i class="icon-facebook"></i></a></li>
-                            <li><a href="#"><i class="icon-twitter"></i></a></li>
-                            <li><a href="#"><i class="icon-dribbble"></i></a></li>
-                            <li><a href="#"><i class="icon-github"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
-                    <div class="fh5co-staff">
-                        <img src="images/person2.jpg" alt="Free HTML5 Templates by gettemplates.co">
-                        <h3>Hush Raven</h3>
-                        <strong class="role">Co-Owner</strong>
-                        <p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat
-                            velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
-                        <ul class="fh5co-social-icons">
-                            <li><a href="#"><i class="icon-facebook"></i></a></li>
-                            <li><a href="#"><i class="icon-twitter"></i></a></li>
-                            <li><a href="#"><i class="icon-dribbble"></i></a></li>
-                            <li><a href="#"><i class="icon-github"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
-                    <div class="fh5co-staff">
-                        <img src="images/person3.jpg" alt="Free HTML5 Templates by gettemplates.co">
-                        <h3>Alex King</h3>
-                        <strong class="role">Co-Owner</strong>
-                        <p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat
-                            velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+
                         <ul class="fh5co-social-icons">
                             <li><a href="#"><i class="icon-facebook"></i></a></li>
                             <li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -289,18 +276,17 @@
             <div class="row copyright">
                 <div class="col-md-12 text-center">
                     <p>
-                        <small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
-                        <small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a>
-                            Demo Images: <a href="http://blog.gessato.com/" target="_blank">Gessato</a> &amp; <a
-                                    href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+                        <small class="block">&copy; 2024. All Rights Reserved.</small>
+                        <small class="block">Designed by Navid Abbasi </small>
+
                     </p>
                     <p>
-                    <ul class="fh5co-social-icons">
-                        <li><a href="#"><i class="icon-twitter"></i></a></li>
-                        <li><a href="#"><i class="icon-facebook"></i></a></li>
-                        <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                        <li><a href="#"><i class="icon-dribbble"></i></a></li>
-                    </ul>
+<!--                    <ul class="fh5co-social-icons">-->
+<!--                        <li><a href="#"><i class="icon-twitter"></i></a></li>-->
+<!--                        <li><a href="#"><i class="icon-facebook"></i></a></li>-->
+<!--                        <li><a href="#"><i class="icon-linkedin"></i></a></li>-->
+<!--                        <li><a href="#"><i class="icon-dribbble"></i></a></li>-->
+<!--                    </ul>-->
 
                 </div>
             </div>
