--- a/backend/public/contact.html
+++ b/backend/public/contact.html
@@ -112,8 +112,8 @@
                     <div class="display-t">
                         <div class="display-tc animate-box" data-animate-effect="fadeIn">
                             <h1>Contact Us</h1>
-                            <h2>Free html5 templates Made by <a href="http://freehtml5.co"
-                                                                target="_blank">freehtml5.co</a></h2>
+<!--                            <h2>Free html5 templates Made by <a href="http://freehtml5.co"-->
+<!--                                                                target="_blank">freehtml5.co</a></h2>-->
                         </div>
                     </div>
                 </div>
@@ -262,10 +262,10 @@
             <div class="row copyright">
                 <div class="col-md-12 text-center">
                     <p>
-                        <small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
-                        <small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a>
-                            Demo Images: <a href="http://blog.gessato.com/" target="_blank">Gessato</a> &amp; <a
-                                    href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+                        <small class="block">&copy; 2024 . All Rights Reserved.</small>
+<!--                        <small class="block">Designed by Navid Abbasi <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a>-->
+<!--                            Demo Images: <a href="http://blog.gessato.com/" target="_blank">Gessato</a> &amp; <a-->
+<!--                                    href="http://unsplash.co/" target="_blank">Unsplash</a></small>-->
                     </p>
                     <p>
                     <ul class="fh5co-social-icons">
