--- a/backend/public/login.html
+++ b/backend/public/login.html
@@ -14,12 +14,12 @@
             <span id="userIcon">Login</span>
         </li>
     </ul>
-<!-- </nav> -->
+</nav>
 <div class="login-container">
     <h2>Login</h2>
-    <form id="loginForm" method = 'post',action = '\login'>   <!-- if it is necessary , add action and method to it.-->
+    <form id="loginForm" method = 'post',action = '\login'>  
         <div class="form-group">
-            <label for="username">Username(Your phoneNumber is username)</label>
+            <label for="username">Username(Username is phone number)</label>
             <input type='text' id='username' name="username" required>
         </div>
         <div class="form-group">
@@ -27,9 +27,13 @@
             <input type='password' id='password' name="password" required>
         </div>
 
-        <button type="submit">login</button>
+        <button id="submit" type="submit">Login</button>
+        <div class="forget password"> <!-- working on this part-->
+            <p>forget my password</p>
+        </div>
         <div id='error-message'></div>
     </form>
+    <button id="Dashboard" style="display:none">Dashboard</button>
     <button id="logoutButton" style="display: none">Log out</button>
 </div>
 <script src="javascripts/login.js"></script>
