Complete front-end of "forget my password"

--- a/backend/public/login.html
+++ b/backend/public/login.html
@@ -29,7 +29,7 @@
 
         <button id="submit" type="submit">Login</button>
         <div class="forget password"> <!-- working on this part-->
-            <p>forget my password</p>
+            <a href="forgetPassword.html">forget my password</a>
         </div>
         <div id='error-message'></div>
     </form>
