Complete CSS and HTML for forget password Working on the OTP

--- a/backend/public/forgetPassword.html
+++ b/backend/public/forgetPassword.html
@@ -6,36 +6,46 @@
 
 <body>
     <div class ='forgetPassword'>
-        <div class="text">
-            <h2 >Enter your Phone Number</h2>
-            <div class="phoneNumber">
-                <!-- <label for="phoneNumber">Enter your Phone Number</label> -->
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+        <form id="resetPassword" >
+            <div class ='text'>
+                <h4>Enter your Email address</h4>
+                <div class = 'Email-auth'>
+                    <input type="email" id="email" name="email">
+                    <button id ='emailSubmit'>Getcode</button>
+                </div>
             </div>
-            <button id ='Getcode' disabled>Get code</button>
-        </div>
-        <div class='h-inputs'>
-            <h3>Enter Password that sent to you</h3>
-            <div class="code-inputs">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
-                <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+            <div class="text">
+                <h2 >Enter your Phone Number</h2>
+                <div class="phoneNumber">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                </div>
+                <button id ='Getcode' disabled>Get code</button>
             </div>
-        </div>
-        <button id="submit" disabled >submit</button>
+            <div class='h-inputs'>
+                <h3>Enter Password that sent to you</h3>
+                <div class="code-inputs">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                    <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
+                </div>
+            </div>
+            <button id="submit" disabled >Submit</button>
+            <div id='errorMessage'></div>
+        </form>
     </div>
+    <script src = 'javascripts/forget-password.js'></script>
     <script>
         function moveFocus(currentInput,next){
             if(currentInput.value.length ===currentInput.maxLength ){
