Problem of front-end connection to the back-end sovled

--- a/backend/public/forgetPassword.html
+++ b/backend/public/forgetPassword.html
@@ -11,7 +11,7 @@
                 <h4>Enter your Email address</h4>
                 <div class = 'Email-auth'>
                     <input type="email" id="email" name="email">
-                    <button id ='emailSubmit'>Getcode</button>
+                    <button id ='emailSubmit' type="button">Getcode</button>
                 </div>
             </div>
             <div class="text">
@@ -29,7 +29,7 @@
                     <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
                     <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
                 </div>
-                <button id ='Getcode' disabled>Get code</button>
+                <button id ='Getcode' type="button" disabled>Get code</button>
             </div>
             <div class='h-inputs'>
                 <h3>Enter Password that sent to you</h3>
@@ -41,7 +41,7 @@
                     <input type="text" maxlength="1" oninput="moveFocus(this,'next')">
                 </div>
             </div>
-            <button id="submit" disabled >Submit</button>
+            <button id="submit" type="button" disabled >Submit</button>
             <div id='errorMessage'></div>
         </form>
     </div>
