Complete Redis implementation and add reset password.html file

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Shop &mdash; Free Website Template, Free HTML5 Template by gettemplates.co</title>
+    <title>Shop &mdash; MAAT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Free HTML5 Website Template by gettemplates.co"/>
+    <meta name="description" content="Made by Navid using html5, css3, mobile first, responsive"/>
     <meta name="keywords"
-          content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"/>
+          content="Made by Navid using html5, css3, mobile first, responsive"/>
     <meta name="author" content="gettemplates.co"/>
 
 
-    <!-- Facebook and Twitter integration -->
+    
     <meta property="og:title" content=""/>
     <meta property="og:image" content=""/>
     <meta property="og:url" content=""/>
@@ -21,9 +21,6 @@
     <meta name="twitter:image" content=""/>
     <meta name="twitter:url" content=""/>
     <meta name="twitter:card" content=""/>
-
-    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i" rel="stylesheet"> -->
 
     <!-- Animate.css -->
     <link rel="stylesheet" href="stylesheet/animate.css">
@@ -59,7 +56,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-xs-2">
-                    <div id="fh5co-logo"><a href="index.html">Shop.</a></div>
+                    <div id="fh5co-logo"><a href="index.html">MAN.</a></div>
                 </div>
                 <div class="col-md-6 col-xs-6 text-center menu-1">
                     <ul>
@@ -71,12 +68,16 @@
                         </li>
                         <li><a href="about.html">About</a></li>
                         <li class="has-dropdown">
-                            <a href="services.html">Services</a>
+                            <a href="services.html">Products</a>
                             <ul class="dropdown">
-                                <li><a href="#">Web Design</a></li>
-                                <li><a href="#">eCommerce</a></li>
-                                <li><a href="#">Branding</a></li>
-                                <li><a href="#">API</a></li>
+                                <li><a href="#">Bag</a></li>
+                                <li><a href="#">Bodysuit</a></li>
+                                <li><a href="#">Chemises</a></li>
+                                <li><a href="#">Croptop</a></li>
+                                <li><a href="#">Pants</a></li>
+                                <li><a href="#">Shoes</a></li>
+                                <li><a href="#">Skirts</a></li>
+                                <li><a href="#">T-Shirt</a></li>
 
                             </ul>
                         </li>
@@ -110,17 +111,17 @@
     <aside id="fh5co-hero" class="js-fullheight">
         <div class="flexslider js-fullheight">
             <ul class="slides">
-                <li style="background-image: url(images/img_bg_1.jpg);">
+                <li style="background-image: url(images/mini-dress.jpg);">
                     <div class="overlay-gradient"></div>
                     <div class="container">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 js-fullheight slider-text">
                             <div class="slider-text-inner">
                                 <div class="desc">
                                     <span class="price">$800</span>
-                                    <h2>Alato Cabinet</h2>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                        Consonantia, there live the blind texts. Separated they live in
-                                        Bookmarksgrove.</p>
+                                    <h2>Mini Dress</h2>
+                                    <p>Material: Polyester; soft and comfortable; fabric stretch: slight stretch
+                                        Features: Short mini dress with satin silky material, slim fit.
+                                        Occasion: Suitable for club, nightclub, party, casual, evening, wedding as a guest, homecoming, dinner, holiday, day and out any special occasions..</p>
                                     <p><a href="single.html" class="btn btn-primary btn-outline btn-lg">Purchase Now</a>
                                     </p>
                                 </div>
@@ -128,16 +129,15 @@
                         </div>
                     </div>
                 </li>
-                <li style="background-image: url(images/img_bg_2.jpg);">
+                <li style="background-image: url(images/women-pants.jpg);">
                     <div class="container">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 js-fullheight slider-text">
                             <div class="slider-text-inner">
                                 <div class="desc">
                                     <span class="price">$530</span>
-                                    <h2>The Haluz Rocking Chair</h2>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                        Consonantia, there live the blind texts. Separated they live in
-                                        Bookmarksgrove.</p>
+                                    <h2>Pants</h2>
+                                    <p>STYLE :high rise jean sits at natural waist with functional pockets, easy zipper fly
+                                        LENGTH - This pant comes in a 31 inch regular/average inseam, 29 inch short inseam and 33 inch long inseam with a 15 inch leg opening..</p>
                                     <p><a href="single.html" class="btn btn-primary btn-outline btn-lg">Purchase Now</a>
                                     </p>
                                 </div>
