The front-end of reste password plus fetch api was finished. Now I should complete backend for handle this request

--- a/backend/public/resetPassword.html
+++ b/backend/public/resetPassword.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang = "">
 <head>
-    <link>
+    <link rel="stylesheet" href="./stylesheet/reset-password.css">
 </head>
 <body>
+    <form id = 'reset'>
+        <div class ="reset-pass">
+            <label for="enterPass">Enter your new password</label>
+            <input type = 'password' id="enterPass" name="enterPass" required>
+        
+        </div>
+        <div class = "reEnterPass">
+            <label for = 'reEnter'>Enter your new password again</label>
+            <input type = 'password' id="reEnter" name="reEnter" required>
+        </div>
+        <div class="submit">
+            <button id="submit" type="submit">Submit</button>
+        </div>
+        <div id="error-Message" style="color:red;"></div>
+    </form>
+    <script src="javascripts/resetPassword.js"></script>
     
-    <script>
-
-    </script>
 </body>
 
 </html>
