Update Password controller is implemented

--- a/backend/public/resetPassword.html
+++ b/backend/public/resetPassword.html
@@ -5,6 +5,10 @@
 </head>
 <body>
     <form id = 'reset'>
+        <div class = "phoneNumber">
+            <label for="phoneNum">Enter your Phone Number</label>
+            <input type="text" id="phoneNum" name="phoneNum" required>
+        </div>
         <div class ="reset-pass">
             <label for="enterPass">Enter your new password</label>
             <input type = 'password' id="enterPass" name="enterPass" required>
